@@ -5,7 +5,7 @@
 
 package Graph::Easy::As_graphml;
 
-$VERSION = '0.03';
+$VERSION = '0.74';
 
 #############################################################################
 #############################################################################
