@@ -6,7 +6,7 @@
 
 package Graph::Easy::Layout::Force;
 
-$VERSION = '0.01';
+$VERSION = '0.74';
 
 #############################################################################
 #############################################################################
