@@ -7,7 +7,7 @@
 
 package Graph::Easy::Layout::Repair;
 
-$VERSION = '0.08';
+$VERSION = '0.74';
 
 #############################################################################
 #############################################################################
